# BugulmaEnjoyers

./: .env-example  README.md  main.py  playground.ipynb  pyproject.toml  pytest.ini  test_inputs.tsv
.github/workflows/: ci.yml
bugulma_enjoyers/: __init__.py  constants.py  default_prompts.py  load_model.py  prompts.py  setup_logging.py
bugulma_enjoyers/datasets/: __init__.py  collate.py  detoxification_dataset.py
bugulma_enjoyers/detoxifiers/: __init__.py  backtranslation.py  base.py  standalone.py
bugulma_enjoyers/io/: __init__.py  input_.py  output.py
bugulma_enjoyers/models/: __init__.py  _api_model.py  _base.py  _google.py  _hf_model.py  _yandex.py
tests/: test-installation.py  test_installation.py  test_io.py
tests/resources/: sample_input.tsv
tests/temp/: sample_out.tsv
